<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Siguiente">Siguiente</string>
    <string name="Volver">Volver</string>
    <string name="Nombre">Nombre</string>
    <string name="Informacion">Informacion</string>
    <string name="Guardar">Guardar</string>
    <string name="Buscar">Buscar</string>
    <string name="Numero1">Numero 1</string>
    <string name="Numero2">Numero 2</string>
    <string name="Numero3">Numero 3</string>
    <string name="Check1">Check 1</string>
    <string name="Check2">Check 2</string>
</resources>